Stops cutting off cloud bottom

--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ footer{
     justify-content: space-between;
     align-items: center;
     position:fixed;
-    height:15vh;
+    height:12vh;
     bottom:0;
     /* border: black solid 3px; */
     left: 0;
@@ -138,4 +138,4 @@ body {
         max-height: 5vh;
     }
 
-}
+} 
